# llmetallm

./: .clang-format  CMakeLists.txt  README.md  main.cpp  metal_impl.cpp
Metal/: Metal.hpp
kernels/: matrix.metal
